crates/shell/src/parser/snapshots/omp_shell__parser__tokenizer__tests__tokenize_here_doc_in_command_substitution.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"echo $(cat <<HERE\nTEXT\nHERE\n)\")?"
---
TokenizerResult(
  input: "echo $(cat <<HERE\nTEXT\nHERE\n)",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("$(cat <<HERE\nTEXT\nHERE\n)", SourceSpan(
      start: SourcePosition(
        index: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        index: 29,
        line: 4,
        column: 2,
      ),
    )),
  ],
)
